deployment/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reference-app
  namespace: reference-dev
spec:
  selector:
    app.kubernetes.io/name: reference-app
  ports:
    - name: http
      port: 80
      targetPort: http
